src/sass/styles.scss
body#layout ul {
    list-style-type: none;
    list-style: none;
}

body#layout ul li {
    list-style-type: none;
    list-style: none;
}

body#layout .fp-slider {
    display: none;
}

body#layout .flexslider {
    display: none;
}

body#layout #skiplinks {
    display: none;
}

body#layout #header-wrapper {
    margin-bottom: 10px;
    min-height: 120px;
    height: auto;
}

body#layout .social-profiles-widget h3 {
    display: none;
}

/* Variable definitions
====================
*/
/* Use this with templates/template-twocol.html */
body {
    background: #fff;
    color: #003963;
    font-family: Arimo, Arial, Helvetica, Sans-serif;
    font-size: 14px;
    line-height: 1.4;
    margin: 0;
    padding: 0;
    -webkit-box-shadow: inset 0 146px 0 0 #d7f4e4, inset 0 186px 0 0 #00a09a;
    -moz-box-shadow: inset 0 146px 0 0 #d7f4e4, inset 0 186px 0 0 #00a09a;
    box-shadow: inset 0 146px 0 0 #d7f4e4, inset 0 186px 0 0 #00a09a;
}

a:link,
a:visited {
    color: #155780;
    text-decoration: none;
    outline: none;
}

a:hover {
    color: #10DCBD;
    text-decoration: none;
    outline: none;
}

a img {
    border-width: 0;
}

#body-wrapper {
    margin: 0;
    padding: 0 8.3333%;
}

@media only screen and (max-width: 480px) {

    #body-wrapper,
    #footer-widgets-container {
        padding: 0 2%;
    }
}

.section,
.widget {
    margin: 0;
    padding: 0;
    line-height: 1.4;
}

.widget ul,
.widget li {
    margin: 0;
    padding: 0;
    line-height: 1.3;
}

h1 {
    font: normal bold 40px Arimo, Arial, Helvetica, sans-serif;
}

h2 {
    font: normal bold 30px Arimo, Arial, Helvetica, sans-serif;
}

h3 {
    font: normal bold 20px Arimo, Arial, Helvetica, sans-serif;
}

h4 {
    font: normal bold 16px Arimo, Arial, Helvetica, sans-serif;
}

h5 {
    font: normal bold 14px Arimo, Arial, Helvetica, sans-serif;
}

h6 {
    font: normal bold 12px Arimo, Arial, Helvetica, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 16px;
    line-height: 1;
}

/* Header-----------------------------------------------*/
#header-wrapper {
    width: 100%;
    margin: 0 auto 0;
    height: 62px;
    padding: 20px 0 20px 0;
    overflow: hidden;
}

#header-inner {
    background-position: center;
    margin-left: auto;
    margin-right: auto;
}

#headerbleft {
    margin: 0;
    color: #ffffff;
    float: left;
    width: 46%;
    overflow: hidden;
}

#headerbleft h1 {
    color: #ffffff;
    margin: 0;
    padding: 0 0 0 0;
    font: normal bold 24px 'Arimo', Arial, Helvetica, Sans-serif;
    line-height: 1;
}

#headerbleft .description {
    padding-left: 0;
    color: #ffffff;
    line-height: 1;
    padding-top: 0;
    margin-top: 10px;
}

#headerbleft h1 a,
#headerbleft h1 a:visited {
    color: #ffffff;
    text-decoration: none;
}

#headerbright {
    float: right;
    width: 52%;
    margin-right: 0;
    padding-right: 0;
    overflow: hidden;
}

#headerbright .widget {
    padding: 0 0 0 0;
    float: right;
}

.social-profiles-widget img {
    margin: 0 4px 0 0;
}

.social-profiles-widget img:hover {
    opacity: 0.8;
}

#top-social-profiles {
    padding: 8px 0 0 0;
    height: 32px;
    text-align: right;
}

#top-social-profiles img {
    margin: 0 0 0 6px !important;
}

#top-social-profiles img:hover {
    opacity: .8;
}

#top-social-profiles .widget-container {
    background: none;
    margin: 0;
    padding: 0;
    border: 0;
}

/* Outer-Wrapper----------------------------------------------- */
#outer-wrapper {
    width: 100%;
    margin: 0 auto 0;
    padding: 0;
    text-align: left;
}

#content-wrapper {
    padding: 15px 0;
    background: #fff;
    overflow: hidden;
}

#main-wrapper {
    width: 70%;
    float: left;
    margin: 0;
    padding: 0 0 0 0;
    word-wrap: break-word;
    overflow: hidden;
}

#rsidebar-wrapper {
    width: 29%;
    float: right;
    margin: 0;
    padding: 0 0 0 0;
    word-wrap: break-word;
    overflow: hidden;
}

/* Posts-----------------------------------------------*/
h2.date-header {
    margin: 1.5em 0 .5em;
    display: none;
}

.wrapfullpost {}

.post {
    margin-bottom: 15px;
    background: #d7f4e4;
    padding: 18px 15px;
    border-radius: 12px
}

.post-title {
    color: #003963;
    margin: 0 0 10px 0;
    padding: 0;
    font: normal bold 20px 'Arimo', sans-serif;
    line-height: 1.1;
}

.post-title a,
.post-title a:visited,
.post-title strong {
    display: block;
    text-decoration: none;
    color: #003963;
    text-decoration: none;
}

.post-title strong,
.post-title a:hover {
    color: #00a09a;
    text-decoration: none;
}

.post-body {
    margin: 0;
    padding: 0 0 0 0;
    line-height: 1.7;
    overflow: hidden;
}

.post-footer {
    margin: 5px 0;
}

.comment-link {
    margin-left: 0;
}

.post-body img {
    padding: 3px;
}

.pbtthumbimg {
    float: left;
    margin: 0 10px 5px 0;
    padding: 4px !important;
    border: 1px solid #eeeeee !important;
    background: none !important;
    width: 200px;
    height: auto;
}

.postmeta-primary {
    color: #999999;
    font-size: 13px;
    line-height: 18px;
    padding: 0 0 10px
}

.postmeta-secondary {
    color: #999999;
    font-size: 13px;
    line-height: 18px;
    padding: 0 0 10px
}

.meta_author,
.meta_date,
.meta_categories,
.meta_comments {
    padding-right: 10px;
    margin-right: 10px;
    background: rgba(0, 0, 0, .1);
    border-radius: 4px;
    border: solid 1px rgba(0, 0, 0, .1);
}

.readmore {
    margin-top: 2px;
    margin-bottom: 5px;
    float: right;
}

.readmore a {
    color: #d7f4e4;
    background: #003963;
    padding: 8px 14px;
    line-height: 1;
    display: inline-block;
    text-decoration: none;
    text-transform: none;
}

.readmore a:hover {
    color: #FFFFFF;
    background: #00a09a;
    text-decoration: none;
}

/* Sidebar Content----------------------------------------------- */
.sidebarpbt {
    margin: 0 0 10px 0;
    color: #003963;
}

.sidebarpbt a {
    text-decoration: none;
    color: #003963;
}
/* ... */

